white space issues fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   src: url("fonts/Alegreya-VariableFont_wght.ttf") format("opentype");
 }
 body {
+  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
